# ml-trial-task

./: .bumpversion.cfg  .gitignore  Dockerfile  Dockerfile_alpine  Dockerfile_debian  Dockerfile_pycharm  README.rst  pyproject.toml  urls.csv
docker/: entrypoint-test.sh  entrypoint.sh
src/ml_trial_task/: __init__.py  console.py  defaultconfig.py  service.py
tests/: __init__.py  conftest.py  test_console.py  test_ml_trial_task.py  test_reqrep.py
