[tool.poetry]
name = "ml_trial_task"
version = "0.1.0"
description = "ml trial task"
authors = ["Andrei Feklistov <a.a.feklistov@gmail.com>"]
# FIXME: Doublecheck these values
#homepage = "https://gitlab.com/advian-oss/ml-trial-task/"
#repository = "https://gitlab.com/advian-oss/ml-trial-task/"
#license = "FIXME"
readme = "README.rst"

[tool.poetry.scripts]
ml_trial_task = "ml_trial_task.console:ml_trial_task_cli"


[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=ml_trial_task --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = "^3.9"
datastreamservicelib = "^1.12"
click = "^8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
coverage = "^7.4"
pytest-cov = "^4.1"
pylint = "^3.0"
black = "^24.1"
bandit = "^1.7"
mypy = "^1.8"
pre-commit = "^3.6"
pytest-asyncio = ">=0.21,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
bump2version = "^1.0"
detect-secrets = "^1.4"
types-toml = ">=0.10,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
